--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         <script src="../posngstagr/pongstagr.am.js"></script>
     </head>
     <body>
-    <div class="container">
+    <div class="container" style="background-color: floralwhite">
         <div class="row " >
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                 <input type="button" value="Загрузить еще" onclick="download()">
